Added keyboard component files, started to build score setter

--- a/src/components/arena/arena.scss
+++ b/src/components/arena/arena.scss
@@ -18,4 +18,8 @@
 
 .arena-component {
     transform: translate(0%, 150%);
+    height: 125px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
