Added DOM changing, will refactor soon, game over missing

--- a/src/components/arena/arena.scss
+++ b/src/components/arena/arena.scss
@@ -1,4 +1,7 @@
 .choice {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     min-width: 60px;
     min-height: 60px;
     max-width: 75px;
