--- a/src/containers/main/main.scss
+++ b/src/containers/main/main.scss
@@ -1,5 +1,5 @@
 .main-container {
-    background-image: linear-gradient(#ef1570, #FC42FF, #38F28B);
+    background-image: linear-gradient(aquamarine, azure, khaki);
     display: flex;
     flex-direction: column;
     align-items: center;
