--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -3,3 +3,13 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
 }
+
+@font-face {
+    font-family: 'Walkway';
+    src: url('../assets/fonts/Walkway.ttf');
+}
+
+@font-face {
+    font-family: 'Simply Rounded';
+    src: url('../assets/fonts/Simply\ Rounded.ttf');
+}
