--- a/src/components/score/score.scss
+++ b/src/components/score/score.scss
@@ -1,22 +1,9 @@
-.score-labels-bar {
-    display: flex;
-    width: 40vw;
-    min-width: 95px;
-    justify-content: space-between;
-    flex-direction: row;
-
-    p {
-        text-transform: uppercase;
-    }
-}
-
-.score-scores-bar {
-    width: 35vw;
-    width: 33vw;
-    padding-left: 3.5vw;
-}
-
 .score-component {
+    display: grid;
+    grid-template-columns: 20vw 20vw;
+    grid-column: 100px 100px;
+    grid-template-rows: 100px 100px;
+    text-align: center;
     * {
         font-family: 'Simply Rounded';
         font-weight: 100;
